--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <div class ="container">
+        <p>This is a paragraph inside a container.</p>
 </body>
 </html>
